# gmime-sq

./: .gitignore  Cargo.toml  GaloreSq-0.1.pc  Makefile  README.md  build.rs  test.c  test.py  todo.txt  updatekeys.sh
include/: galore-sq-context.h  gmime-autocrypt-store.h  gmime-crypto-policy.h  gmime-sq-context.h
src/: error.rs  lib.rs  stream.rs
src/autocrypt/: autocrypt.rs  ffi.rs  imp.rs  mod.rs
src/context/: ffi.rs  imp.rs  mod.rs  query.rs  sq.rs
src/galore_sq_context/: imp.rs  mod.rs  sq.rs
src/policy/: imp.rs  mod.rs
test/: message.eml  signed.eml
