[package]
name = "galore-sq"
version = "0.1.0"
authors = ["Per Odlund <odlund@posteo.net>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
libc = "0.2"
# ffi = { package = "gmime-sys", path = "gmime-sys" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
# gio = "0.14.8"
# glib = "0.14.8"
gmime = { git = "https://github.com/dagle/gmime-sq", branch = "subclass"}
# gmime = { path = "/home/dagle/code/gmime-rs/" }
once_cell = "1.0"
chrono = "0.4.10"
anyhow = "*"
sequoia-openpgp = "1.10.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
# strip = true  # Automatically strip symbols from the binary.

[features]
bindings = []
