[package]
name = "gmime-sq"
version = "0.1.0"
authors = ["Per Odlund <odlund@posteo.net>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
libc = "0.2"
gio = { git = "https://github.com/gtk-rs/gtk-rs-core" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
sequoia-autocrypt = "0.25.0"
sequoia-autocrypt-store = { git = "https://github.com/dagle/sequioa-autocrypt" }
gmime = { git = "https://github.com/dagle/gmime-rs"}
once_cell = "1.0"
chrono = "0.4.10"
anyhow = "*"
sequoia-openpgp = "1.10.0"
memchr = "2.5.0"
sequoia-policy-config = "0.6.0"
sequoia-cert-store = "0.2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
# strip = true  # Automatically strip symbols from the binary.

[features]
bindings = []
